methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:20: error: '=' expected but identifier found.
def faire Graphique() {
          ^MethodsPicture:28: error: illegal start of simple expression
}
^